// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownContainer should be rendered correctly 1`] = `
<div
  className="uui-dropdown-body root background-white -lock-focus container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled root size-36 color-sky fill-solid style-square"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={-1}
  />
</div>
`;

exports[`DropdownContainer should be rendered correctly with extra props 1`] = `
<div
  className="uui-dropdown-body root background-night700 -lock-focus container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": 300,
      "minWidth": 200,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled root size-36 color-sky fill-solid style-square"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={-1}
  />
</div>
`;
